# KalmanFilter

./: README.md
KF_EKF/: CMakeLists.txt
KF_EKF/app/: main.cpp
KF_EKF/config/: cfg.yaml
KF_EKF/data/: output.txt
KF_EKF/include/: common.h  data_manager.h  ekf.h  kalman_filter_base.h  kf.h
KF_EKF/scripts/: plot.py
KF_EKF/src/: data_manager.cpp  ekf.cpp  kf.cpp
